added project link button

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -502,9 +502,12 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project1/project1-intro.html" target="_blank" rel="noopener noreferrer">project 1</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
-                <div class="click-me">  
+                <div class="collections-click-me">  
                   <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
@@ -531,9 +534,12 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project2/project2-intro.html" target="_blank" rel="noopener noreferrer">project 2</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
-                <div class="click-me">  
+                <div class="collections-click-me">  
                   <a href="https://github.com/Allison2002/my_tube.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
@@ -561,9 +567,12 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project3/project3-intro.html" target="_blank" rel="noopener noreferrer">project 3</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://sports-tube-community.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
-                <div class="click-me">  
+                <div class="collections-click-me">  
                   <a href="https://github.com/Allison2002/sports_tube_community.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
@@ -594,6 +603,9 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project4/project4-intro.html" target="_blank" rel="noopener noreferrer">project 4</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://texas-remodelers-sample.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
                 <div class="click-me">  
@@ -623,6 +635,9 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project5/project5-the-design.html" target="_blank" rel="noopener noreferrer">project 5</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://parenttech.support/videos/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
               </div>
@@ -649,9 +664,12 @@
               </div>
               <div class="collections-button-grid">
                 <div class="collections-click-me">
+                  <a href="/pages/project6/project6-the-design.html" target="_blank" rel="noopener noreferrer">project 6</a>
+                </div>
+                <div class="collections-click-me">
                   <a href="https://mario-race.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
-                <div class="click-me">  
+                <div class="collections-click-me">  
                   <a href="https://github.com/Allison2002/MarioKart.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
