saved uncommitted changes

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -528,6 +528,9 @@
           <p>
             I see this milestone not as the end of the journey, but as a stepping stone toward mastering web development and SEO strategies. Every project is an opportunity to refine my skills and continue delivering impactful solutions for clients and users alike.
           </p>
+          <p>
+            (Note: These scores can vary slightly depending on Google's latest testing rules, browser versions, and server response times. As of the most recent test, the site remains fully optimized and consistently performs at the highest tier.)
+          </p>
           <div class="list-items">
             <ul>
               <li>Optimizing image sizes to balance speed and quality.</li>
