--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -520,6 +520,9 @@
           <p>
             This project began with a mobile score of 71 and a desktop score of 96. Through a comprehensive rebuild, I brought both to a perfect <strong>100/100</strong>—a result of combining <strong>AI-powered content creation</strong> with performance-focused web development.
           </p>
+          <p>
+            (Note: These scores can vary slightly depending on Google's latest testing rules, browser versions, and server response times. As of the most recent test, the site remains fully optimized and consistently performs at the highest tier.)
+          </p>
 
           <div class="list-items">
             <ul>
