--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -487,6 +487,9 @@
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
           <p><strong>Achieving a perfect Google PageSpeed Insights score of 100 on both mobile and desktop</strong> for the Sports Tube Community Blog underscores my commitment to optimizing web performance and delivering a seamless user experience. This achievement reflects meticulous attention to detail and a user-centered approach, ensuring accessibility and speed across all devices.</p>
+          <p>
+            (Note: These scores can vary slightly depending on Google's latest testing rules, browser versions, and server response times. As of the most recent test, the site remains fully optimized and consistently performs at the highest tier.)
+          </p>
             <div class="list-items">
               <ul>
                 <li><strong>AI-generated content and visuals:</strong> Ensuring the highest quality while maintaining fast load times.</li>
