fixed class name for button

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -608,7 +608,7 @@
                 <div class="collections-click-me">
                   <a href="https://texas-remodelers-sample.netlify.app/" target="_blank" rel="noopener noreferrer">final design</a>
                 </div>
-                <div class="click-me">  
+                <div class="collections-click-me">  
                   <a href="https://github.com/Allison2002/texas-remodelers-sample.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
                 </div>
               </div>
