adjusted aspect-ratio

--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -366,14 +366,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,h_86,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_144,h_63,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="160"
-              height="86"
+              width="144"
+              height="63"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio: 48 / 48;"
+              style="object-fit: cover; aspect-ratio: 144 / 63;"
             />
           </a>
         </div>
