re-styled skills to be more responsive

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -440,6 +440,7 @@
     </header>
     <main class="skills-main" id="skills-pages">
         <!--skills-->
+
       <div class="skills-container">
         <div class="skills-grid skills-black-container">
           <div class="skills-row">
@@ -451,7 +452,7 @@
               <h2 class="skills-text">AI Content Creation</h2>
               <span class="tooltip-text">Skilled in leveraging AI tools like ChatGPT and Jasper to create high-quality, SEO-friendly articles and content that engage audiences and enhance online presence.</span>
             </div>
-            <div class="skills skills1 tooltip" tabindex="0">
+            <div class="skills skills1 skills-firstset tooltip" tabindex="0">
               <h2 class="skills-text">AI Image Generation</h2>
               <span class="tooltip-text">Proficient in using AI image generation tools like Midjourney and DALL·E to create unique and high-quality images for websites, blogs, and social media, enhancing visual storytelling.</span>
             </div>
