added explicit sizing to footer logo to prevent flash

--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -724,14 +724,14 @@
               sizes="100vw"
             />
             <img       
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="242"
-              height="105"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+              width="317"
+              height="136"
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
-              style-"object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 317 / 136;"
             />
           </picture>
         </div>
