--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -620,6 +620,31 @@
             style-"object-fit: cover;"
           />
         </picture>
+      </div><div class="footer-logo">
+        <picture> 
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_317,h_136,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+            width="317"
+            height="136"
+            loading="lazy"
+            fetchpriority="low"
+            decoding="async" 
+            style="object-fit: cover; aspect-ratio: 317 / 136;"
+          />
+        </picture>
       </div>
       <div class="footer-links" id="footer-links">
         <ul>
