replaced downloadable resume

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -396,161 +396,78 @@
     <main class="about-me" id="resume">
       <div class="projects-content">
         <div class="resume-date fancy-border project-title" id="description">
-          <h2>Owner | Operator | Allison Stock Inc.</h2>
-          <h3>January 2023 - Present</h3>
+          <h2>Founder | AI Content Engineer | Allison Stock Inc.</h2>
+          <h3>January 2023 – Present</h3>
         </div>
+
         <article class="resume-summary" id="aboutme-section1">
-          <h2>AI Content Creator & SEO Specialist</h2>
+          <h2>AI Content Creator · SEO Specialist · Web Performance Optimizer</h2>
           <p>
-            With a solid foundation in web development and a passion for
-            creativity, I established Allison Stock Inc. as a web
-            development business dedicated to delivering dynamic,
-            user-centered websites. Leveraging my skills in Full Stack
-            Development, UI/UX design, and graphic design, I have
-            successfully delivered a range of projects, including both
-            paid freelance work and personal initiatives that
-            demonstrate my versatility and commitment to excellence.
+            I founded <strong>Allison Stock Inc.</strong> as a performance-focused web development and AI content consultancy. My mission is to build SEO-optimized, fast-loading websites powered by cutting-edge AI tools and human-centered design principles.
           </p>
           <p>
-            In my drop shipping business, I created all product designs
-            using tools like Canva, Adobe Photoshop, Kittl, Figma, and
-            my own photography. This experience honed my ability to
-            blend creativity with strategic business acumen, ensuring
-            not only visually appealing products but also marketable
-            ones.
+            I specialize in end-to-end development of content-rich platforms using HTML, CSS, JavaScript, WordPress, and performance tuning best practices. Each site is engineered to achieve top Core Web Vitals scores and maximum visibility through structured data, semantic markup, and technical SEO audits.
           </p>
           <p>
-            By applying my organizational, management, and client
-            engagement skills developed through years of running my own
-            businesses, I have transformed Allison Stock Inc. into a
-            full-service web development business. My background
-            uniquely positions me to understand both the technical and
-            business sides of web development, making me a strong
-            candidate for roles that require a blend of creativity,
-            technical skill, and real-world business experience.
+            My creative toolkit includes <strong>ChatGPT, MidJourney, Figma, Canva, Photoshop, and Uizard</strong>. These tools power my workflows in <strong>AI content creation, prompt engineering, UX/UI wireframing, schema generation, and visual branding</strong>.
           </p>
           <p>
-            <strong>Web Development & Design: </strong>Spearheaded the
-            design and development of multiple websites, ensuring they
-            are fully responsive, visually engaging, and meet WCAG
-            accessibility standards. My work involves a deep
-            understanding of front-end technologies, including HTML,
-            CSS, and JavaScript, as well as back-end integration when
-            necessary.
+            In parallel with client work, I’ve launched multiple personal case studies and portfolio projects that showcase how AI, performance metrics, and SEO intersect to deliver both search engine success and user satisfaction.
           </p>
-          <p>
-            <strong>Graphic Design & Branding: </strong>Utilized Adobe
-            Photoshop, Figma, MidJourney, and Canva to create original
-            graphics and visual content that align with brand
-            identities. Developed logos, marketing materials, and
-            website elements that enhance user experience and
-            engagement.
-          </p>
-          <p>
-            <strong>Client Collaboration: </strong>Engaged with clients
-            to understand their needs and deliver customized solutions
-            that exceed expectations. Managed project timelines,
-            communicated progress, and ensured high levels of client
-            satisfaction.
-          </p>
-          <p>
-            <strong>Market Research & Strategy: </strong>Employed tools
-            like MidJourney and ChatGPT to conduct market research and
-            inform design decisions, ensuring that projects are not only
-            aesthetically pleasing but also strategically sound.
-          </p>
-          <p>
-            <strong>Professional Background: </strong> My background spans business ownership, project management,
-            and creative design. Leveraging my technical knowledge in
-            web development with my skills in client communication and
-            strategic planning, I offer a holistic approach to building
-            user-centered digital experiences.
-          </p>
+          <p><strong>AI-Powered Content & Prompt Engineering:</strong> Created AI-generated blog articles, product descriptions, metadata, and schema using ChatGPT, optimized via LLM prompt design and structured workflows. Integrated prompt loops for performance-grade SEO writing and technical content generation.</p>
+          <p><strong>Web Development & Optimization:</strong> Built fast, responsive websites with a focus on <strong>WCAG accessibility</strong>, Core Web Vitals, and Lighthouse 100/100 scores. Applied image compression, lazy loading, custom preload strategies, and responsive breakpoints for peak performance.</p>
+          <p><strong>SEO & Structured Data:</strong> Conducted technical SEO audits, created schema markup, implemented Open Graph/Twitter cards, and optimized layouts to reduce CLS and LCP for both desktop and mobile.</p>
+          <p><strong>Visual Design & Branding:</strong> Designed logos, UI systems, and page layouts using Figma, MidJourney, and Photoshop. Created social share cards, custom icons, and UI components tailored to the brand story of each client.</p>
+          <p><strong>Client Collaboration:</strong> Delivered freelance UI/UX and performance optimization work using WordPress and Elementor. Translated goals into wireframes and prototypes, integrating newsletter forms, dynamic layouts, and mobile-first strategy.</p>
+
           <div class="resume-date fancy-border project-sub-title" id="aboutme-section2">
-            <h2>my education</h2>
+            <h2>My Education</h2>
           </div>
-          <p> 
-            From a young age, I’ve embraced self-education, cultivating a deep passion for learning and a strong ability to teach myself new skills. I was homeschooled from 6th grade through high school, an experience that not only fostered my independence but also laid the foundation for my lifelong curiosity and initiative. I approach every unfamiliar concept with curiosity and determination—researching thoroughly and applying what I learn in real-world projects. This mindset has led to consistent success across everything I take on. 
-          </p> 
-          <p> 
-            To build a solid and up-to-date foundation in web development, I’ve taken a strategic and rigorous approach to online learning. I am currently earning and have completed certifications from leading educational platforms, including: </p> 
-            <div class="list-items">
-              <ul> 
-                <li>
-                  <strong>Devslopes Academy</strong> (Aug 2024 – Mar 2025): Training in WordPress Development, Front-End and Back-End Web Development, UX/UI Design, WCAG compliance, E-Commerce, Plugins, and Graphic Design.
-                </li> 
-                <li>
-                  <strong>freeCodeCamp</strong> (Apr 2023 – Sep 2024): Full Stack Developer Certification covering HTML, CSS, JavaScript, frontend/backend integration, responsive design, and version control.
-                </li> 
-                <li>
-                  <strong>Codecademy</strong> (Jan 2023 – Sep 2024): In-progress Full Stack Certification covering Web Development fundamentals, advanced CSS, Python, Git/GitHub, and deployment techniques.
-                </li> 
-                <li>
-                  <strong>HubSpot Academy</strong> (Completed Nov 2024): SEO, SEO II, Content Marketing, and Content Strategy certifications—focused on data-driven content planning, on-page and technical SEO, link building, storytelling, and performance optimization.
-                </li> 
-                <li>
-                  <strong>Google Analytics Certification</strong> (Upcoming): Planned for completion immediately after my portfolio is finalized to further strengthen my capabilities in digital performance measurement.
-                </li> 
-              </ul> 
-            </div>
-            <p> Together, these programs have provided me with not just technical skills, but also strategic insight into how development, design, SEO, and content all work together to create powerful digital experiences. My self-taught journey reflects my dedication to excellence and my drive to stay at the forefront of web development and digital strategy. 
+          <p>
+            Homeschooled from 6th grade through graduation, I’ve always embraced independent learning. Every skill I’ve developed—web development, AI integration, SEO, and content strategy—was earned through curiosity, grit, and real-world application.
           </p>
+          <p>
+            I’ve completed or am currently pursuing certifications through the following programs:
+          </p>
+          <div class="list-items">
+            <ul>
+              <li><strong>Devslopes Academy</strong> (Aug 2024 – Mar 2025): WordPress, Front/Back-End Development, UX/UI, WCAG, Plugins, E-Commerce.</li>
+              <li><strong>freeCodeCamp</strong> (Apr 2023 – Sep 2024): Full Stack Certification (HTML, CSS, JavaScript, responsive design, GitHub).</li>
+              <li><strong>Codecademy</strong> (Jan 2023 – Sep 2024): In progress Full Stack track with Python, Git/GitHub, deployment workflows, advanced CSS.</li>
+              <li><strong>HubSpot Academy</strong> (Completed Nov 2024): SEO, SEO II, Content Strategy, and Content Marketing certifications.</li>
+              <li><strong>Google Analytics Certification</strong> (Planned): Scheduled post-portfolio for deeper analytics and campaign evaluation skills.</li>
+            </ul>
+          </div>
+          <p>
+            These programs have given me not just technical fluency, but strategic insight into how <strong>design, SEO, AI, and user experience</strong> intersect in high-performing websites.
+          </p>
+
           <div class="resume-date fancy-border project-sub-title" id="download-me">
-            <h2> 
-              <a
-                href="/img/genny_allison_resume/gennyallison-resume.pdf"
-                download="gennyallison-resume.pdf"
-                class="links"
-                >download my resume
+            <h2>
+              <a href="/img/genny_allison_resume/gennyallison-resume.pdf" download="/img/genny_allison_resume/gennyallison" class="links">
+                download my resume
               </a>
             </h2>
           </div>
-          <div class="author-bio-container fancy-border-img" id="author-bio">
-            <picture> 
-              <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-                type="image/avif"
-                media="(min-width: 1200px)"
-                sizes="100vw"
-              />
-              <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-                type="image/avif"
-                media="(min-width: 481px) and (max-width: 1199px)"
-                sizes="100vw"
-              />
-              <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-                width="320" 
-                height="234" 
-                alt="Photo of Genny Allison, the web developer and AI content specialist"
-                style="object-fit: contain;"
-                loading="auto" 
-                decoding="async" 
-              />
-            </picture> 
-            <div class="author-bio-text">
-              <h3>Partner with an AI Content Creator & SEO Specialist</h3>
-              <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
-              <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
-              <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
 
-              <p>Connect with me on 
-                <a href="https://www.linkedin.com/in/genny-allison/" 
-                  target="_blank" 
-                  rel="noopener noreferrer" 
-                  aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
-                </a>, explore my 
-                <a href="https://gennyallison.netlify.app"
-                  target="_blank" 
-                  rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                  >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.
-              </p>
+          <div class="author-bio-container fancy-border-img" id="author-bio">
+            <picture>
+              <source srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" type="image/avif" media="(min-width: 1200px)" sizes="100vw" />
+              <source srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)" sizes="100vw" />
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" width="320" height="234" alt="Photo of Genny Allison, the AI content engineer and SEO specialist" style="object-fit: contain;" loading="auto" decoding="async" />
+            </picture>
+
+            <div class="author-bio-text">
+              <h3>Partner with an AI Content Engineer & Performance Specialist</h3>
+              <p><i>If you’re seeking someone who blends technical precision, AI fluency, SEO strategy, and design clarity—let’s connect.</i></p>
+              <p>I'm <strong>Genny Allison</strong>, founder of Allison Stock Inc. I specialize in AI-enhanced content systems, SEO-optimized websites, and front-end experiences built to perform. I use tools like <strong>ChatGPT, MidJourney, Figma, and Lighthouse</strong> to drive both creative outcomes and measurable results.</p>
+              <p>Explore my <a href="https://gennyallison.netlify.app" target="_blank" rel="noopener noreferrer">portfolio</a> or visit my <a href="/pages/contact.html">contact page</a> to start a conversation.</p>
+              <p>Also connect with me on <a href="https://www.linkedin.com/in/genny-allison/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
             </div>
-          </div>   
-        </article>  
+          </div>
+        </article>
       </div>
-    </main>
+    </main>     
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
